[package]
name    = "regex-cache"
version = "0.2.1"
edition = '2018'

authors = ["meh. <meh@1aim.com>"]
license = "MIT"

description = "Lazy and cached regular expressions."
repository  = "https://github.com/1aim/rust-regex-cache"
keywords    = ["regex", "lazy", "cache"]
readme = "README.md"

[dependencies]
regex        = "1.5.4"
regex-syntax = "0.6.25"
lru-cache    = "0.1.2"
oncemutex    = "0.1.1"
